# Poisson-test

./: Post_Processing.ipynb  model.py  pde.py  py_pde.py  pyproject.toml  solver.py  utils.py
data/: poisson_1.h5
poisson_output_24/Advection_PINTO/: Poisson_model.keras  history.csv  sensor.csv  val_history.csv
